<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.Faq">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:padding="6dp"
            />
        <TextView
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1"
            android:textSize="15sp"
            android:padding="6dp"
            android:layout_below="@+id/q1"
            />
</RelativeLayout>
 </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="6dp"
                />
            <TextView
                android:id="@+id/a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_below="@+id/q2"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="6dp"
                />
            <TextView
                android:id="@+id/a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_below="@+id/q3"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="6dp"
                />
            <TextView
                android:id="@+id/a4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_below="@+id/q4"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:padding="6dp"
                />
            <TextView
                android:id="@+id/a5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_below="@+id/q5"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

</LinearLayout>


</ScrollView>